fix ticker display / source on mobile

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -166,6 +166,12 @@ header {
 		width: 80%;
 	}
 	
+	#ticker-display {
+		width: 100vw;
+		left: 0px;
+	    padding: 0px 20px;
+	}
+
 	#reports {
 		position: static;
 		bottom: 0px;
